service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-web
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: react-web
  type: ClusterIP
