ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: react-web-ingress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: react-web
            port:
              number: 8080
        path: /
        pathType: Prefix
